Refactor: Integrate changes resulting from AI testing to improve the embedded AI's understanding of how to use the components. Update all top level documentation.